--- a/index.html
+++ b/index.html
@@ -20,5 +20,86 @@
     </header>
     <!--/Intestazione della pagina-->
 
+    <main>
+        <!--Sezione spese-->
+        <section>
+            <h3>Le mie spese</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120 &euro;</td>
+                </tr>
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360 &euro;</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>   
+        </section>
+        <!--/Sezione spese-->
+
+        <!-- To Do List-->    
+        <section>
+            <h4>Cose da fare</h2>
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare Greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish &amp; Chips inglese &cross;</li>
+            </ul>
+            <hr>
+        </section>
+        <!-- /To Do List-->
+
+        <!-- Info -->
+        <section>
+            <h4>Info utili:</h4>
+            <ol>
+                <li>Numeri di emergenza</li>
+                    <ul>
+                        <li> <strong>999</strong> - Emergenza</li>
+                        <li> <strong>101</strong>- Numero polizia</li>
+                        <li> <strong>111</strong> - Assistenza Medica</li>
+                    </ul>
+                <li>Hotel
+                    <ul>
+                        <li><strong>Nome hotel</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong> Westminster, London SW1A1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>Aereo
+                    <ul>
+                        <li><strong>Volo di andata</strong> Y1234X ore 9,30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno</strong> Y1236X ore 18,30 da London Healthrow</li>
+                    </ul>
+                </li>
+            </ol>
+        </section>
+         <!--/Info -->
+        <hr>
+    </main>
+
+    
 </body>
 </html>
