--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
         <section>
             <h4>Info utili:</h4>
             <ol>
-                <li>Numeri di emergenza</li>
+                <li>Numeri di emergenza
                     <ul>
                         <li> <strong>999</strong> - Emergenza</li>
                         <li> <strong>101</strong>- Numero polizia</li>
                         <li> <strong>111</strong> - Assistenza Medica</li>
                     </ul>
+                </li>
                 <li>Hotel
                     <ul>
                         <li><strong>Nome hotel:</strong> Buckingham Palace</li>
